[thpatch] Prevent adding pages in different languages to aggregate groups
Change-Id: I88b534ae8db6197c836f97aa4b4f9f7eb858cdb8

--- a/i18n/api/de.json
+++ b/i18n/api/de.json
@@ -19,6 +19,7 @@
 	"apihelp-aggregategroups-param-groupname": "Name der zusammengefassten Nachrichtengruppe.",
 	"apihelp-aggregategroups-param-groupdescription": "Beschreibung der zusammengefassten Nachrichtengruppe.",
 	"apihelp-aggregategroups-example-1": "Verknüpft eine Gruppe",
+	"apierror-aggregategroups-source-language-mismatch": "Die Quellsprache dieser Nachrichtengruppe ist '$1'. Seiten mit der Quellsprache '$2' können ihr nicht hinzugefügt werden.",
 	"apihelp-groupreview-description": "Nachrichtengruppen-Workflow-Status festlegen.",
 	"apihelp-groupreview-summary": "Nachrichtengruppen-Workflow-Status festlegen.",
 	"apihelp-groupreview-param-group": "Nachrichtengruppe.",
