[thpatch] Remove the priority language section from Special:PageTranslation
We'll be running a fork of this extension for the foreseeable future
anyway. It's more robust to remove this section from PHP rather than
hiding it via a CSS rule that can easily get outdated whenever upstream
adds new sections to the page (which did in fact happen between 2014
and now). In PHP, we'd at least get a merge conflict in that case.

Change-Id: I85c79d98462be43479611c417ab5763e1ef107b4

--- a/README
+++ b/README
@@ -13,6 +13,7 @@ Touhou Patch Center fork, implementing the following changes:
   removed, as we can't guarantee that they share the same source language.
 • A redesigned translation interface, merging the original list, page, and
   proofread modes into a single tabular layout.
+• The *Priority languages* section was removed from Special:PageTranslation.
 
 Original README below.
 
